--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "sequelize": "^6.15.1"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "seeds": "node seeds/index.js"
   },
   "name": "tech-blog-ctijerina",
   "description": "",
